# egptfinetuning

./: FINETUNING_GUIDE.md  README.md  augmentedv1.jsonl  convert_dataset.py  pyproject.toml  requirements.txt  test_emogpt.py  train_emogpt.py
