[project]
name = "finetuning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=0.24.0",
    "bitsandbytes>=0.41.0",
    "datasets>=2.14.0",
    "peft>=0.7.0",
    "tiktoken>=0.5.0",
    "torch>=2.1.0",
    "transformers>=4.36.0",
    "trl>=0.7.4",
    "unsloth",
    "wandb>=0.16.0",
]

[tool.uv.sources]
unsloth = { git = "https://github.com/unslothai/unsloth.git" }
